vlib/v/checker/tests/anon_missing_generic_err.out
vlib/v/checker/tests/anon_missing_generic_err.vv:8:2: notice: uninitialized `fn` struct fields are not allowed, since they can result in segfaults; use `?fn` or `@[required]` or initialize the field with `=` (if you absolutely want to have unsafe function pointers, use `= unsafe { nil }`)
    6 | 
    7 | struct Factory {
    8 |     build fn () !
      |     ~~~~~~~~~~~~~
    9 | }
   10 |
vlib/v/checker/tests/anon_missing_generic_err.vv:21:14: error: Add the generic type `E` to the anon fn generic list type, that is currently `[F]`
   19 | fn use_factory[F, E](factory fn (dep F) !E) Factory {
   20 |     return Factory{
   21 |         build: fn [factory] [F]() ! {
      |                    ~~~~~~~
   22 |             mut dep := F{}
   23 |             inject[F](mut dep)!
vlib/v/checker/tests/anon_missing_generic_err.vv:12:16: error: $for expects a type name or variable name to be used here, but F is not a type or variable name
   10 | 
   11 | fn inject[T](mut serv T) ! {
   12 |     $for field in T.fields {
      |                   ^
   13 |         if field.typ is string {
   14 |             serv.$(field.name) = 'Hello world!'
